# mergekit

./: README.md  pyproject.toml
docs/: whisper-evaluation.md
mergekit/evaluation/: __init__.py  asr_metrics.py  multilingual_evaluator.py  whisper_evaluator.py
mergekit/scripts/: compare_whisper_models.py  evaluate_whisper.py  evaluate_whisper_multilingual.py
tests/: test_asr_evaluation.py  test_multilingual_evaluator.py  test_whisper_evaluator.py
