[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mergekit"
version = "0.1.1"
description = "Tools for merging pre-trained large language models"
authors = ["Charles Goddard <chargoddard@gmail.com>"]
readme = "README.md"
license = "BUSL-1.1"
repository = "https://github.com/cg123/mergekit"
packages = [
    { include = "mergekit" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
torch = ">=2.0.0"
tqdm = "4.67.1"
click = "8.1.8"
safetensors = "^0.5.2"
accelerate = "^1.3.0"
pydantic = "^2.10.6"
immutables = "0.21"
transformers = ">=4.45.2"
tokenizers = ">=0.20.1"
huggingface-hub = "*"
peft = "*"
typing-extensions = "*"
sentencepiece = "*"
protobuf = "*"
scipy = "*"
datasets = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.evolve.dependencies]
ray = "*"
cma = "*"
lm_eval = "*"
wandb = "*"

[tool.poetry.group.vllm.dependencies]
vllm = {version = "0.7.2", optional = true}
lm_eval = {extras = ["vllm"], version = "*", optional = true}

[tool.poetry.group.whisper.dependencies]
jiwer = {version = ">=2.3.0", optional = true}
evaluate = {version = ">=0.4.0", optional = true}
librosa = {version = ">=0.9.0", optional = true}
pandas = {version = ">=1.3.0", optional = true}

[tool.poetry.scripts]
mergekit-yaml = "mergekit.scripts.run_yaml:main"
mergekit-legacy = "mergekit.scripts.legacy:main"
mergekit-layershuffle = "mergekit.scripts.layershuffle:main"
bakllama = "mergekit.scripts.bakllama:main"
mergekit-moe = "mergekit.scripts.moe:main"
mergekit-tokensurgeon = "mergekit.scripts.tokensurgeon:main"
mergekit-extract-lora = "mergekit.scripts.extract_lora:main"
mergekit-extract-whisper-lora = "mergekit.scripts.extract_whisper_lora:main"
mergekit-evolve = "mergekit.scripts.evolve:main"
mergekit-pytorch = "mergekit.scripts.merge_raw_pytorch:main"
mergekit-multi = "mergekit.scripts.multimerge:main"
mergekit-evaluate-whisper = "mergekit.scripts.evaluate_whisper:main"
mergekit-compare-whisper = "mergekit.scripts.compare_whisper_models:main"
mergekit-evaluate-whisper-multilingual = "mergekit.scripts.evaluate_whisper_multilingual:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:huggingface_hub.*:",
    "ignore::FutureWarning:huggingface_hub.*:",
    "ignore:(read_text|open_text|contents|is_resource) is deprecated:DeprecationWarning",
    "ignore:Attempting Automatic Merge:UserWarning",
    "ignore:No architecture config available:UserWarning",
]
testpaths = ["tests"]

[tool.poetry.extras]
whisper = ["jiwer", "evaluate", "librosa", "pandas"]
vllm = ["vllm", "lm_eval"] 